--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,16 +3,19 @@ annotated-types==0.7.0
 anyio==4.11.0
 av==16.0.1
 blinker==1.9.0
+cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 coloredlogs==15.0.1
 ctranslate2==4.6.0
+dotenv==0.9.9
 fastapi==0.120.2
 faster-whisper==1.2.0
 filelock==3.20.0
 flatbuffers==25.9.23
 fsspec==2025.9.0
+google-auth==2.42.1
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
@@ -28,17 +31,22 @@ numpy==2.3.4
 onnxruntime==1.23.2
 packaging==25.0
 protobuf==6.33.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.12.3
 pydantic_core==2.41.4
+python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
+rsa==4.9.1
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.49.1
 sympy==1.14.0
+tenacity==9.1.2
 tokenizers==0.22.1
 tqdm==4.67.1
 typer-slim==0.20.0
@@ -46,4 +54,5 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.38.0
+websockets==15.0.1
 Werkzeug==3.1.3
